--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
 	<head>
 		<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="manifest" href="manifest.json">
+        <!-- <link rel="manifest" href="manifest.json"> -->
         <meta name="mobile-web-app-capable" content="yes">
-        <link rel="icon" sizes="124x124" href="favicon.png">
-		<title>React.js Boilerplate</title>
+        <link rel="icon" sizes="124x124" href="img/favicon.png">
+		<title>ezDoc</title>
 	</head>
 	<body>
 		<!-- The app hooks into this div -->
 		<div id="app"></div>
-		<!-- Open Sans Font -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-		<!-- Due to the way webpack works, a lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Check out webpackconfig.js if you want to know more. -->
 	</body>
 </html>
