--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<body>
 		<!-- The app hooks into this div -->
 		<div id="app"></div>
+		<!-- <script src="js/app.js" charset="utf-8"></script> -->
 	</body>
 </html>
