--- a/print.html
+++ b/print.html
@@ -6,12 +6,11 @@
 
         <title>Print</title>
         <style>
-
-
             body {
                 margin: 50px;
                 padding: 0px;
                 width: 100%;
+                font-size: 20px;
                 background: #ccc;
             }
             .container {
@@ -25,10 +24,11 @@
             }
             .header-box {
                 text-align: center;
-
             }
             .first-header {
                 font-family: STXingkai;
+                font-weight: normal;
+                font-size: 28px;
             }
             .second-header {
                 font-family: STSong;
@@ -43,7 +43,6 @@
             .table-box .row:last-child {
                 border-bottom: black solid 1px;
             }
-
             .row {
                 height:0.43in;
                 display: flex;
@@ -57,14 +56,12 @@
                 width: 0px;
                 display: flex;
             }
-
             .row .cell:last-child {
                 border-right: black solid 1px;
             }
-
             .label {
                 flex-basis: 0.71in;
-                font-size: 18px;
+                font-size: 20px;
             }
             .label-article {
                 width: 0.55in;
@@ -74,10 +71,10 @@
             }
             .entry {
                 flex-grow: 1;
-                font-size: 16px;
+                font-size: 20px;
+                line-height: 1.4;
                 hyphens: auto;
             }
-
             /* article */
             .article-row {
                 /*min-height: 2.8in;*/
@@ -100,7 +97,7 @@
                 border-bottom: none;
             }
             .container-article-row .label {
-                flex-basis: 0.8in;
+                flex-basis: 1in;
                 flex-shrink: 0;
             }
             .container-article-row .entry {
@@ -108,6 +105,8 @@
                 flex-shrink: 0;
                 padding-left: 10px;
                 padding-right: 5%;
+                padding-top: 10px;
+                padding-bottom: 10px;
                 justify-content: flex-start;
             }
             .flex-grow {
@@ -118,18 +117,16 @@
                 flex-grow: 3;
                 flex-shrink: 0;
             }
-
             .result-row {
                 height: auto;
-                min-height: 1.89in;
+                min-height: 2in;
             }
-
             .result-container {
                 display: block;
                 text-align: right;
-                padding-top: 0.7in;
+                padding-top: 0.9in;
                 padding-bottom: 0.2in;
-                padding-right: 0.7in;
+                padding-right: 0.9in;
             }
             #button__print {
                 position: fixed;
@@ -148,19 +145,16 @@
                 cursor: pointer;
             }
             @media print {
-
                 @page {
                     margin: 0;
                     size: A4;
                 }
-
                 body {
                     margin: 0px;
                     padding: 0px;
                     width: 100%;
                     background: none;
                 }
-
                 .container {
                     width: 210mm;
                     height: 297mm;
@@ -264,32 +258,25 @@
                 // trap the return key being pressed
                 if (event.keyCode != 13)
                     return true;
-
                 var docFragment = document.createDocumentFragment();
-
                 //add a new line
                 var newEle = document.createTextNode('\n');
                 docFragment.appendChild(newEle);
-
                 //add the br, or p, or something else
                 newEle = document.createElement('br');
                 docFragment.appendChild(newEle);
-
                 //make the br replace selection
                 var range = window.getSelection().getRangeAt(0);
                 range.deleteContents();
                 range.insertNode(docFragment);
-
                 //create a new range
                 range = document.createRange();
                 range.setStartAfter(newEle);
                 range.collapse(true);
-
                 //make the cursor there
                 var sel = window.getSelection();
                 sel.removeAllRanges();
                 sel.addRange(range);
-
                 return false;
             });
           </script>
